--- a/notebook_trial_prediction.ipynb
+++ b/notebook_trial_prediction.ipynb
@@ -361,6 +361,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note on the outliers: a high number of onboard events is obviously not normal. Normally there should be 4. But there could be users that have their registration process interrupted or try several times. For the moment we are going to keep all the numbers and do not filter by outlier. We leave finding if these outliers exist as future work. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -610,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "622 users didn't complete the onboarding successfully. It makes sense to ignore this users since they will never get to the 7 days trial. We will drop them"
+    "622 users went through the first steps of registration but didn't complete the onboarding successfully. It makes sense to ignore this users since they will never get to the 7 days trial. We will drop them"
    ]
   },
   {
@@ -645,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +767,7 @@
        "4  23561214 1609072141.000  2020-12-27T12:29:54Z  subscription_enter       {\"source\":\"launcher\",\"child_id\":23709588,\"platform\":\"google\"}  {\"os\":{\"name\":\"Android\",\"version\":\"10\"},\"location\":{\"country\":\"es\"},\"timezone\":\"Europe/Madrid\",\"locale\":\"ru\",\"device\":{\"name\":\"samsung\",\"type\":\"samsung\",\"model\":\"SM-G975F\",\"manufacturer\":\"samsung\",\"platform\":\"google\"}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counting the number of times a user enters the subscription event"
+    "Counting the number of times a user enters the subscription event and the number of times it subscribe succesfully"
    ]
   },
   {
@@ -1008,7 +1015,7 @@
     }
    ],
    "source": [
-    "# Some users have more than one subscription succesful which does not really makes sense. We change values greater than one to one\n",
+    "\n",
     "subscription_events_count_df['event_name_subscription_successful'].value_counts()"
    ]
   },
@@ -1018,6 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Some users have more than one subscription succesful which does not really makes sense. We change values greater than one to one\n",
     "subscription_events_count_df.loc[subscription_events_count_df['event_name_subscription_successful']>1, 'event_name_subscription_successful'] = 1"
    ]
   },
@@ -1246,6 +1254,13 @@
    ],
    "source": [
     "subscription_enter_source_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another interesting piece of information is from where did the user enter the subscription paywall."
    ]
   },
   {
