Added additional comments on future work

--- a/notebook_trial_prediction.ipynb
+++ b/notebook_trial_prediction.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,9 @@
     "from sklearn.model_selection import KFold\n",
     "import shap\n",
     "\n",
+    "import urllib.request\n",
+    "import os\n",
+    "\n",
     "fpath_activities = 'data/activities.tsv'\n",
     "fpath_invoices = 'data/invoices.tsv'\n",
     "fpath_onboard_events = 'data/onboarding_events.tsv'\n",
@@ -99,7 +102,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Note: Put the files activities.tsv, invoices.tsv, onboarding_events.tsv and subscription_events.tsv into the data folder before executing"
+    "##### Note: Put the files activities.tsv, invoices.tsv, onboarding_events.tsv and subscription_events.tsv into the data folder before executing. If needed execute the next cell to download them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_files():\n",
+    "    file_locations = {\n",
+    "        'onboarding_events.tsv': 'https://lingokids-exports.s3.amazonaws.com/hiring/marketing-data-scientist/onboarding_events.tsv',\n",
+    "        'invoices.tsv': 'https://lingokids-exports.s3.amazonaws.com/hiring/marketing-data-scientist/invoices.tsv',\n",
+    "        'subscription_events.tsv': 'https://lingokids-exports.s3.amazonaws.com/hiring/marketing-data-scientist/subscription_events.tsv',\n",
+    "        'activities.tsv': 'https://lingokids-exports.s3.amazonaws.com/hiring/marketing-data-scientist/activities.tsv'}\n",
+    "    files = ['activities.tsv', 'invoices.tsv', 'onboarding_events.tsv', 'subscription_events.tsv']\n",
+    "    for file in files:\n",
+    "        if file not in os.listdir('data'):\n",
+    "            with urllib.request.urlopen(file_locations[file]) as remote:\n",
+    "                with open('data/{0}'.format(file), 'wb') as f:\n",
+    "                    f.write(remote.read())\n",
+    "                    \n",
+    "download_files()"
    ]
   },
   {
@@ -9422,7 +9447,8 @@
    "source": [
     "- Note that here we are aggregating the events for each customer during the whole trial. We could aggregate this events for day 1, day 2, etc... of the trial, as the impact of one variable in day 1 does not have to be the same as in the last days of the trial. \n",
     "- Another point to improve is the model. Since this is a sequence prediction problem, models like LTSM could be more effective since they are able to memorise the order of the events instead of just aggregating them without considering their sequence. \n",
-    "- A better handling of outliers could also be interesting. We could eliminate them and work with a much more constrained dataset that only contains the activities of the \"average\" user."
+    "- A better handling of outliers could also be interesting. We could eliminate them and work with a much more constrained dataset that only contains the activities of the \"average\" user.\n",
+    "- It could be interesting to have different models for each of the days of the trial as the statistical correlations between features could be different each day. In the first day of the trial the usage pattern could be different in comparison to the days after. For instance, most users could be more active during the first stages of the trial but if they keep being active day after day, is a good hint of a possible paying customer. "
    ]
   },
   {
